# bzf-http

./: .gitignore  CMakeLists.txt  Dockerfile
cmake/: CMockaTest.cmake
launcher/: CMakeLists.txt
launcher/src/: coucou_endpoint.c  main.c  root_endpoint.c
libs/bytes/: CMakeLists.txt
libs/bytes/include/: bzf_bytes.h
libs/bytes/src/: bzf_bytes_add_offset.c  bzf_bytes_equals.c  bzf_bytes_split.c  bzf_bytes_tokenize.c  bzf_bytes_tokenize_once.c  bzf_bytes_tokenize_with_remainder.c
libs/dynamic_array/: CMakeLists.txt
libs/dynamic_array/src/: bzf_dynamic_array_get.c  bzf_dynamic_array_get_back.c  bzf_dynamic_array_get_ptr.c  bzf_dynamic_array_initialize.c  bzf_dynamic_array_push_back.c  bzf_dynamic_array_reserve.c  bzf_dynamic_array_set.c
libs/hashmap/: CMakeLists.txt
libs/hashmap/mocks/: bzf_hashmap_hash_string_mock.c  bzf_hashmap_insert_mock.c  bzf_hashmap_mocks.h
libs/hashmap/src/: bzf_hashmap.c  bzf_hashmap_free.c  bzf_hashmap_get.c  bzf_hashmap_hash_string.c  bzf_hashmap_initialize.c  bzf_hashmap_insert.c  bzf_hashmap_remove.c
libs/http_server/: CMakeLists.txt
libs/http_server/include/: bzf_http_server.h
libs/http_server/src/: bzf_http_add_route_handler.c  bzf_http_free_base.c  bzf_http_handle_request.c  bzf_http_send_response.c  bzf_http_server.c  bzf_http_server_accept_and_handle.c  bzf_http_server_accept_client.c  bzf_http_server_destroy.c  bzf_http_server_impl.h  bzf_http_server_initialize.c  bzf_http_server_run.c  default_handler.c  http.h  http_fetch_and_parse_error_to_request_error.c  http_fetch_and_parse_head.c  parse_http_request_line.c  printf_bytes_t.c  private.h
libs/os/: CMakeLists.txt
libs/os/include/: bzf_os.h
libs/os/mocks/: bzf_accept.c  bzf_bind.c  bzf_close.c  bzf_listen.c  bzf_os_calloc.c  bzf_os_free.c  bzf_os_malloc.c  bzf_os_mocks.h  bzf_recv.c  bzf_send.c  bzf_setsockopt.c  bzf_socket.c
libs/os/src/: bzf_accept.c  bzf_bind.c  bzf_close.c  bzf_listen.c  bzf_os_calloc.c  bzf_os_free.c  bzf_os_malloc.c  bzf_recv.c  bzf_send.c  bzf_setsockopt.c  bzf_socket.c
tests/: CMakeLists.txt
tests/bytes/: CMakeLists.txt  test_bytes.c  test_bzf_bytes_add_offset.c  test_bzf_bytes_equals.c  test_bzf_bytes_split.c  test_bzf_bytes_tokenize.c  test_bzf_bytes_tokenize_once.c  test_bzf_bytes_tokenize_with_remainder.c
tests/dynamic_array/: CMakeLists.txt  test_bzf_dynamic_array_get.c  test_bzf_dynamic_array_get_back.c  test_bzf_dynamic_array_get_ptr.c  test_bzf_dynamic_array_initialize.c  test_bzf_dynamic_array_push_back.c  test_bzf_dynamic_array_reserve.c  test_bzf_dynamic_array_set.c  test_dynamic_array.c
tests/hashmap/: CMakeLists.txt  test_bzf_hashmap_free.c  test_bzf_hashmap_get.c  test_bzf_hashmap_hash_string.c  test_bzf_hashmap_initialize.c  test_bzf_hashmap_insert.c  test_bzf_hashmap_remove.c  test_hashmap.c
tests/http_server/: CMakeLists.txt  test_bzf_default_handler.c  test_bzf_http_add_route_handler.c  test_bzf_http_fetch_and_parse_head.c  test_bzf_http_free_base.c  test_bzf_http_handle_request.c  test_bzf_http_send_response.c  test_bzf_http_server_accept_and_handle.c  test_bzf_http_server_accept_client.c  test_bzf_http_server_destroy.c  test_bzf_http_server_initialize.c  test_bzf_parse_http_request_line.c  test_http_server.c
